Changes in Swagger docs file for Customer Profile(Customer its Cars and Its Addresses).
